add some new methods by language
